# parabridge

./: .gitmodules  .gitpod.yml  README.md  cspell.json  pyproject.toml
.github/workflows/: test.yml
parabridge/: __init__.py  parabridge_daemon.py  settings.py
src/parabridge/: __init__.py  __main__.py  info.py  parabridge_daemon.py  settings.py
src/parabridge/cli/: __init__.py
src/parabridge_core/: common.py
