[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parabridge"
dynamic = ["version"]
description = 'A simple python daemon that can dynamically sync paradox database with SQLite database.'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "Grigory Petrov", email = "grigory.v.p@gmail.com" },
  { name = "Edouard Choinière", email = "27212526+echoix@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Topic :: Database",
]
dependencies = [
  "click",
  # "pyparadoxdb@git+https://github.com/echoix/pyparadoxdb.git@dev-hatch",
  "pyparadoxdb@{root:uri}/src/pyparadoxdb",
]

[project.urls]
Documentation = "https://github.com/grigoryvp/parabridge"
Issues = "https://github.com/grigoryvp/parabridge/issues"
Source = "https://github.com/grigoryvp/parabridge"

[project.scripts]
parabridge = "parabridge.cli:parabridge"

[tool.hatch.version]
path = "src/parabridge/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/parabridge tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["parabridge"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["parabridge", "tests"]
branch = true
parallel = true
omit = ["src/parabridge/__about__.py"]

[tool.coverage.paths]
parabridge = ["src/parabridge", "*/parabridge/src/parabridge"]
tests = ["tests", "*/parabridge/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
